Fix price promotion alignment

--- a/css-challenges/knitting-pro-page/styles.css
+++ b/css-challenges/knitting-pro-page/styles.css
@@ -285,7 +285,7 @@ p:not(.courses) {
 
 .card {
   display: grid;
-  grid-template-rows: min-content 1fr min-content 1fr;
+  grid-template-rows: min-content 1fr min-content min-content;
   padding: 1.75rem;
   border-radius: 1.25rem;
 }
